--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = "postgresql://postgres:password@localhost:5432/"
+DATABASE_URL = "postgresql://postgres:password@localhost:5432/UAVNDatabase"
 JWT_SECRET_KEY = "1qaz2wsx3edc4rfv5tgb6yhn7ujm8ik9ol0pnip"
