--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.0",
     "webpack": "^5.0.0"
   },
