--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 version: '3.8'
 services:
 
-  # Docker connection string: postgres://postgres:postgres@localhost:5432/
+  # Docker connection string: postgres://postgres:password@localhost:5432/
 
   postgres:
     image: postgres:16.2
