--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.1.0",
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -29,6 +30,7 @@
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "5.10.2",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
