--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "workspaces": {
+    "packages": ["extensions/*"],
+    "nohoist": ["**/wrap-ansi", "**/string-width"]
+  },  
   "dependencies": {
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/bull": "^10.1.0",
