--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "workspaces": {
-    "packages": ["extensions/*"],
-    "nohoist": ["**/wrap-ansi", "**/string-width"]
-  },  
+    "packages": [
+      "extensions/*"
+    ],
+    "nohoist": [
+      "**/wrap-ansi",
+      "**/string-width"
+    ]
+  },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/bull": "^10.1.0",
@@ -46,6 +51,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "string-width": "^7.1.0",
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.0",
     "webpack": "^5.0.0"
