--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "5.10.2",
+    "@types/lodash": "^4.17.0",
     "@types/nodemailer": "^6.4.14",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "handlebars": "^4.7.8",
+    "lodash": "^4.17.21",
     "nodemailer": "^6.9.12",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
