--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "5.10.2",
     "@types/lodash": "^4.17.0",
     "@types/nodemailer": "^6.4.14",
+    "@types/ping": "^0.4.4",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.2",
     "class-transformer": "^0.5.1",
@@ -51,6 +53,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "ping": "^0.4.4",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "string-width": "^7.1.0",
